RESOLVED FIXED105614
Fix build warnings related with gstreamer
https://bugs.webkit.org/show_bug.cgi?id=105614
Summary Fix build warnings related with gstreamer
KyungTae Kim
Reported 2012-12-20 21:13:50 PST
Source/WebCore/platform/audio/gstreamer/AudioDestinationGStreamer.cpp:49:13: warning: unused parameter ‘element’ [-Wunused-parameter] Source/WebCore/platform/audio/gstreamer/AudioFileReaderGStreamer.cpp:103:10: warning: unused parameter ‘bus’ [-Wunused-parameter] Source/WebCore/platform/audio/gstreamer/AudioFileReaderGStreamer.cpp:108:13: warning: unused parameter ‘element’ [-Wunused-parameter] Source/WebCore/platform/audio/gstreamer/AudioFileReaderGStreamer.cpp:113:13: warning: unused parameter ‘element’ [-Wunused-parameter] Source/WebCore/platform/audio/gstreamer/AudioFileReaderGStreamer.cpp:118:13: warning: unused parameter ‘element’ [-Wunused-parameter]
Attachments
Patch (3.37 KB, patch)
2012-12-20 21:17 PST, KyungTae Kim
no flags
Patch for landing (3.41 KB, patch)
2012-12-20 21:53 PST, KyungTae Kim
no flags
KyungTae Kim
Comment 1 2012-12-20 21:17:27 PST
Kentaro Hara
Comment 2 2012-12-20 21:22:03 PST
Comment on attachment 180478 [details] Patch ok
WebKit Review Bot
Comment 3 2012-12-20 21:27:05 PST
Comment on attachment 180478 [details] Patch Rejecting attachment 180478 [details] from commit-queue. Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', u'--status-host=queues.webkit.org', ..." exit_code: 1 cwd: /mnt/git/webkit-commit-queue /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/15451302
KyungTae Kim
Comment 4 2012-12-20 21:53:24 PST
Created attachment 180480 [details] Patch for landing
WebKit Review Bot
Comment 5 2012-12-20 22:45:54 PST
Comment on attachment 180480 [details] Patch for landing Clearing flags on attachment: 180480 Committed r138349: <http://trac.webkit.org/changeset/138349>
WebKit Review Bot
Comment 6 2012-12-20 22:45:58 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.