Fix build warnings related with gstreamer https://bugs.webkit.org/show_bug.cgi?id=105614

Patch by KyungTae Kim <ktf.kim@samsung.com> on 2012-12-20
Reviewed by Kentaro Hara.

The below functions have unused parameters.
Remove the parameter names to fix 'unused parameter' build warnings.

* platform/audio/gstreamer/AudioDestinationGStreamer.cpp:
(WebCore::onGStreamerWavparsePadAddedCallback):
* platform/audio/gstreamer/AudioFileReaderGStreamer.cpp:
(WebCore::messageCallback):
(WebCore::onGStreamerDeinterleavePadAddedCallback):
(WebCore::onGStreamerDeinterleaveReadyCallback):
(WebCore::onGStreamerDecodebinPadAddedCallback):

Canonical link: https://commits.webkit.org/123834@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138349 268f45cc-cd09-0410-ab3c-d52691b4dbfc